Updating README.MD

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,5 +1,12 @@
 {% extends 'base.html.twig' %}
 
+{#{% javascripts#}
+{#'@jquery_and_ui'#}
+{#'@AppBundle/Resources/public/js/*' %}#}
+{#<script src="{{ asset_url }}"></script>#}
+{#{% endjavascripts %} #}
+
+
 {% block body %}
     <div id="wrapper">
         <div id="container">
