--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ asset('css/news.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/program.css') }}">
     </head>
     <body>
         {% block body %}{% endblock %}
