Updates template actuality page and adds fonts

--- a/web/css/news.css
+++ b/web/css/news.css
@@ -7,6 +7,7 @@ body {
 
 .header {
   width: 100%;
+  background-color: #F7F7F8;
 }
 .header_logo {
   display: block;
@@ -41,7 +42,7 @@ body {
     width: 1130px;
     height: 80px;
     /*background-color: #fff;*/
-    background-color: rgba(48, 217, 151, 0.7);
+    background-color: rgba(48, 217, 151, 0.3);
     border: solid 1px #9B9B9B;
     margin: auto;
     text-align: center;
