--- a/src/AppBundle/Resources/views/Actuality/index.html.twig
+++ b/src/AppBundle/Resources/views/Actuality/index.html.twig
@@ -9,8 +9,8 @@
     <img class="header_logo" src="{{ asset('img/Cartoon_Network_logo.png') }}" alt="">
     <nav class="navbar navbar-inverse">
         <ul class="nav navbar-nav">
-          <li><a href="#">ACTUALITÉS</a></li>
-          <li><a href="#">PROGRAMME</a></li>
+          <li><a href="index.html.twig">ACTUALITÉS</a></li>
+          <li><a href="programme">PROGRAMME</a></li>
         </ul>
         <!-- <p class="navbar-text">Some text</p> -->
     </nav>
