Adding Personne Entity

--- a/web/css/news.css
+++ b/web/css/news.css
@@ -1,6 +1,6 @@
 body {
   background-color: #F7F7F8;
-  /*background-image: url(../img/kawai_bg.jpg);*/
+  background-image: url(../img/kawai_bg.jpg);
   margin: 0;
   font-family: 'Open Sans', sans-serif;
 }
