--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ asset('css/news.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ asset('css/program.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/login.css') }}">
     </head>
     <body>
         {% block body %}{% endblock %}
