--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,23 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="col-sm-6">
+        <h1 class="title_welcome_login">Bienvenue sur votre espace</h1>
+        <img class="logo_login" src="{{ asset('img/Cartoon_Network_logo.png') }}" alt="">
+        <h2 class="title_compte_login">Pas de compte ?</h2>
+        <h2 class="title_create_login">Créer un compte</h2>
+    </div>
 
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <div class="col-sm-6">
+        {% if error %}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
+        <form action="{{ path('login') }}" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="_password" />
 
-        <button type="submit">login</button>
-    </form>
+            {#
+                If you want to control the URL the user
+                is redirected to on success (more details below)
+                <input type="hidden" name="_target_path" value="/account" />
+            #}
+
+            <button type="submit">login</button>
+        </form>
+    </div>
 {% endblock %}
