--- a/web/css/news.css
+++ b/web/css/news.css
@@ -238,13 +238,14 @@ ul {
   background-color: #fff;
   height: auto;
   border: solid 1px #9B9B9B;
-  margin-top: 10px;
-
+  margin-bottom: 10px;
 }
 .news_container_middle_newstitle{
+  margin-top: 15px;
   margin-left: 18px;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 19px;
+  text-transform: uppercase;
 }
 .news_container_middle_newsimg {
   width: 100%;
