--- a/web/css/login.css
+++ b/web/css/login.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+
 /*
 ** LEFT : CARTOON NETWORK
 */
@@ -5,14 +10,66 @@
 	text-transform: uppercase;
 	font-size: 30px;
 	font-weight: bold;
+	text-align: center;
+	width: 250px;
+	margin: 15px auto 50px auto;
+	color: black;
 }
 .logo_login {
 	width: 250px;
 	height: auto;
+	display: block;
+	margin: 0px auto 70px auto;
 }
-.title_compte_login {
+.title_compte_login, .title_create_login {
 	text-transform: uppercase;
 	font-size: 18px;
 	font-weight: bold;
 }
-.title_create_login {}
+
+
+/*
+** RIGHT : LOGIN
+*/
+.no_paddingLeft_login {
+	padding-left: 0px;
+}
+.no_paddingRight_login {
+	padding-right: 0px;
+	background-color: rgba(48, 217, 151, 0.701961);;
+	height: 293px;
+	margin-top: 150px;
+}
+.title_login_login {
+	text-transform: uppercase;
+	font-size: 16px;
+	font-weight: bold;
+	margin: 0px 0px 10px 0px;
+}
+.text_login_login {
+	color: black;
+	margin-bottom: 30px;
+}
+.block_login_login {
+	width: 400px;
+	background-color: white;
+	padding: 30px;
+	margin-top: 150px;
+}
+#username, #password {
+	color: #c8c8c8;
+	border: 1px solid #c8c8c8;
+	margin-bottom: 15px;
+	padding: 5px 15px;
+	width: 100%;
+}
+.submit_login {
+	background-color: #30d997;
+	color: white;
+	border: none;
+	padding: 10px 45px;
+	text-transform: uppercase;
+	font-size: 16px;
+	margin: 0px auto;
+	display: block;
+}
