--- a/src/AppBundle/Resources/views/Programme/index.html.twig
+++ b/src/AppBundle/Resources/views/Programme/index.html.twig
@@ -6,6 +6,7 @@
 
 <div class="header">
     <img class="header_logo" src="{{ asset('img/Cartoon_Network_logo.png') }}" alt="">
+    <a href="login" class="button_login"> CONNEXION / INSCRIPTION </a></li>
     <nav class="navbar navbar-inverse">
         <ul class="nav navbar-nav">
           <li><a href="../">ACTUALITÉS</a></li>
