--- a/web/css/news.css
+++ b/web/css/news.css
@@ -17,6 +17,14 @@ a {
   margin: 0 auto;
   padding: 20px 0 20px 0;
 }
+
+.button_login{
+
+    float: right;
+    margin-top: -50px;
+    margin-right: 100px;
+}
+
 .navbar-nav {
   margin-left: 210px;
 }
