--- a/app/Resources/views/actuality/show.html.twig
+++ b/app/Resources/views/actuality/show.html.twig
@@ -7,6 +7,7 @@
 {% block body %}
     <div class="header">
         <img class="header_logo" src="{{ asset('img/Cartoon_Network_logo.png') }}" alt="">
+        <a href="login" class="button_login"> CONNEXION / INSCRIPTION </a></li>
         <nav class="navbar navbar-inverse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html.twig">ACTUALITÉS</a></li>
