--- a/web/css/news.css
+++ b/web/css/news.css
@@ -380,3 +380,28 @@ ul {
   text-transform: uppercase;
   font-weight: 700;
 }
+
+
+/*
+** TABLET
+*/
+@media screen and (min-width: 540px) and (max-width: 1023px) {
+  .header_logo {
+    width: 100px;
+  }
+  .nav>li {
+    display: inline-block;
+  }
+  .button_login {
+    margin-top: -30px;
+    margin-right: 15px;
+  }
+}
+
+
+/*
+** PHONE
+*/
+@media screen and (max-width: 539px) {
+
+}
