--- a/web/css/program.css
+++ b/web/css/program.css
@@ -3,7 +3,6 @@ body {
 }
 
 .button_login{
-
     float: right;
     margin-top: -50px;
     margin-right: 100px;
@@ -112,3 +111,20 @@ body {
 /*
 ** MIDDLE BLOC DERNIERS SUJETS D'ACTUALITES
 */
+
+
+
+
+
+@media screen and (min-width: 540px) and (max-width: 1023px) {
+  .header_logo {
+    width: 100px;
+  }
+  .nav>li {
+    display: inline-block;
+  }
+  .button_login {
+    margin-top: -30px;
+    margin-right: 15px;
+  }
+}
