last delete of great failed features

--- a/src/AppBundle/Resources/views/Actuality/index.html.twig
+++ b/src/AppBundle/Resources/views/Actuality/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="header">
-    <img class="header_logo" src="{{ asset('img/Cartoon_Network_logo.png') }}" alt="">
+  <a href="../"><img class="header_logo" src="{{ asset('img/Cartoon_Network_logo.png') }}" alt=""></a>
     <a href="login" class="button_login"> CONNEXION </a></li>
     <nav class="navbar navbar-inverse">
         <ul class="nav navbar-nav">
@@ -18,7 +18,7 @@
   </div>
 
 
-  <div class="news_searchbar">
+  <!-- <div class="news_searchbar">
     <div class="news_searchbar_elements">
       <input type="text" class="news_searchbar_elements_form" placeholder="Rechercher">
 
@@ -27,9 +27,9 @@
             <img src="img/search.png" alt="">
           </div>
       </button>
-
     </div>
-  </div>
+  </div> -->
+
   <div class="news_add">
     <a href="http://www.cartoonnetwork.fr/promotion/concours-lego-batman"><img src="img/add_batman.png" alt="Concours Lego Batman"></a>
   </div>
