--- a/web/css/news.css
+++ b/web/css/news.css
@@ -106,7 +106,7 @@ a {
 */
 
 .news_container_left {
-  height: 500px;
+  height: auto;
   border: solid 1px #9B9B9B;
   padding: 0;
   background-color: #fff;
@@ -203,6 +203,12 @@ ul {
   width: 100%;
   position: relative;
   padding: 10px 10px 0px 10px;
+  display: inline-block;
+}
+.news_container_left_old:last-child {
+  width: 100%;
+  position: relative;
+  padding: 10px 10px 10px 10px;
   display: inline-block;
 }
 .news_container_left_old_img {
